# backtest

./: CMakeLists.txt  Makefile  README.md  backtest.cpp  run_cmake
src/: CMakeLists.txt  Deriv1Indicator.cpp  Deriv1Indicator.hpp  Deriv2Indicator.cpp  Deriv2Indicator.hpp  Position.cpp  Position.hpp  PositionStats.hpp  PriceConsumer.hpp  SMAComputer.hpp  SMAIndicator.hpp  analyze_prices.cpp  analyze_prices.hpp  bt_require.hpp  bt_utils.cpp  bt_utils.hpp  cmdline_parser.cpp  cmdline_parser.hpp  read_stream.cpp  read_stream.hpp
unit_tests/: CMakeLists.txt  utest_analyze_prices.cpp  utest_bt_utils.cpp  utest_cmdline_parser.cpp  utest_indicators.cpp  utest_observers.cpp  utest_position.cpp  utest_position_stats.cpp  utest_read_stream.cpp  utest_smacomputer.cpp  utest_utils.cpp  utest_utils.hpp
